bases/infrastructure/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: default
spec:
  selector:
    matchLabels:
      app: grafana
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: grafana
    spec:
      containers:
        - image: binkcore.azurecr.io/grafana:develop-427a5e22
          imagePullPolicy: Always
          name: grafana
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 3000
              protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: binkcore.azurecr.io
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
