bases/infrastructure/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: grafana.tools.bink.sh
  namespace: default
spec:
  rules:
    - host: grafana.tools.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.tools.bink.sh
      secretName: grafana.tools.bink.sh
